Fix for vertical display

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             #loadscreen img {
                 width: 100%; 
                 height: 100%; 
+                background: url('resources/world.jpg');
+                background-size: cover;
+                background-position: center center;
             }
 
             #start {
@@ -121,7 +124,7 @@
 		<script src="js/main.js"></script>
 
         <div id="loadscreen" >
-            <img src="resources/world.jpg"/>
+            <img src=''/>
             <input id='start' type=button value='Loading...' disabled/>
         </div>
 
